# isotherm

./: CMakeLists.txt  README.md  heat2d.cpp  heat2d_parallel.cpp  submit_jobs.sh  viz.py
c_version/: heat2D  heat2D.c
c_version/heat2DXlib/: Makefile  dataMain  dataMain.c  processingModule.c  processingModule.h  saveData
